tests/ui/const-generics/defaults/forward-declared.stderr
error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/forward-declared.rs:1:29
   |
LL | struct Foo<const N: usize = M, const M: usize = 10>;
   |                             ^ cannot reference `M` before it is declared

error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/forward-declared.rs:4:27
   |
LL | enum Bar<const N: usize = M, const M: usize = 10> {}
   |                           ^ cannot reference `M` before it is declared

error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/forward-declared.rs:7:30
   |
LL | struct Foo2<const N: usize = N>;
   |                              ^ cannot reference `N` before it is declared

error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/forward-declared.rs:10:28
   |
LL | enum Bar2<const N: usize = N> {}
   |                            ^ cannot reference `N` before it is declared

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0128`.
